--- a/assets/sass/_index-process.sass
+++ b/assets/sass/_index-process.sass
@@ -15,7 +15,6 @@
     vertical-align: top
     color: $primary-white
     text-align: left
-    font-family: $primary-font
 
     @media screen and (max-width: 1180px)
       display: block
@@ -32,6 +31,7 @@
     font-size: 7vw
     font-weight: bold
     line-height: 9vw
+    font-family: $primary-font-bold
 
     @media screen and (max-width: 1180px)
       font-size: 8vw
@@ -47,6 +47,7 @@
     padding-bottom: 4rem
     position: relative
     font-weight: bold
+    font-family: $primary-font-bold
 
     @media screen and (max-width: 1180px)
       width: 80%
@@ -72,6 +73,7 @@
   &-steps
     font-size: 1.2vw
     margin-top: 3rem
+    font-family: $primary-font-semi
 
     @media screen and (max-width: 1180px)
       font-size: 2.2vw
@@ -94,7 +96,7 @@
 
   &-box
     height: 40rem
-    font-family: $primary-font
+    font-family: $primary-font-reg
     text-align: center
     margin: .5rem
     border-radius: .5rem
