--- a/assets/sass/_index-testimonial.sass
+++ b/assets/sass/_index-testimonial.sass
@@ -13,16 +13,18 @@
 
   .clients
     font-size: $header-four
-    font-weight: bold
     border-bottom: .2rem solid #000
     width: 65%
+    font-family: $primary-font-bold
 
   .comment
     font-size: $secondary-size
     font-style: italic
+    font-family: $primary-font-reg
 
   .author
     font-size: 2rem
+    font-family: $primary-font-semi
 
   a
     text-align: center
