--- a/assets/sass/_index-we.sass
+++ b/assets/sass/_index-we.sass
@@ -10,7 +10,7 @@
         vertical-align: top
         width: 40%
         padding-top: 6rem
-        font-family: $primary-font
+        font-family: $primary-font-bold
         color: $primary-white
         font-weight: bold
         text-shadow: 1rem .6rem #898a8a
@@ -48,7 +48,6 @@
         width: 40%
         text-align: left
         font-size: 2.2vw
-        font-family: $primary-font
 
         @media screen and (max-width: 950px)
             display: block
@@ -60,14 +59,14 @@
             font-size: 1.8rem
 
         &-title
-            font-weight: bold
+            font-family: $primary-font-bold
         
         &-info
-            font-weight: lighter
+            font-family: $primary-font-reg
 
     .learn-more
-        font-family: $primary-font
-        font-size: 2.2vw
+        font-family: $primary-font-reg
+        font-size: 1.8vw
         text-decoration: underline
         color: #000
 
