--- a/assets/sass/_index-why.sass
+++ b/assets/sass/_index-why.sass
@@ -5,7 +5,7 @@
   &-header
     display: block
     font-size: 3.2vw
-    font-weight: bold
+    font-family: $primary-font-bold
 
     @media screen and (max-width: 950px)
       font-size: 3.8vw
@@ -61,7 +61,7 @@
 
   h4
     font-size: 3.2vw
-    font-weight: normal
+    font-family: $primary-font-reg
 
     @media screen and (max-width: 950px)
       font-size: 3.8vw
@@ -70,7 +70,7 @@
       font-size: 3rem
   p
     font-size: 2vw
-    font-weight: lighter
+    font-family: $primary-font-thin
 
     @media screen and (max-width: 500px)
       font-size: 1.8rem
