--- a/assets/sass/_navbar.sass
+++ b/assets/sass/_navbar.sass
@@ -51,7 +51,7 @@
 
     h1
       margin-bottom: 2rem
-      font-family: $primary-font
+      font-family: $primary-font-semi
       font-weight: 500
       display: inline-block
 
@@ -106,7 +106,7 @@
           color: $primary-white
           transition: .3s
           font-size: 2rem
-          font-family: $primary-font
+          font-family: $primary-font-semi
           font-weight: 1000
 
           @media screen and (max-width: 780px)
