--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -27,6 +27,6 @@
         color: #fff
         text-decoration: underline
         font-size: 16px
-        font-weight: bold
+        font-family: $primary-font-semi
         cursor: not-allowed
 
