--- a/assets/sass/_index-faq.sass
+++ b/assets/sass/_index-faq.sass
@@ -2,6 +2,22 @@
   padding: 8rem 0
   text-align: center
 
+  &-header
+    font-family: $secondary-font
+    font-size: 10rem
+    color: #efd59a
+    text-shadow: -.7rem -.5rem $primary-blue, -1.4rem 0 #000
+    border: .8rem double #000
+    line-height: 12rem
+    margin: 0 auto 5rem
+    width: 30rem
+
+    @media screen and (max-width: 500px)
+      font-size: 8rem
+      width: 20rem
+      line-height: 9rem
+      text-shadow: -.5rem -.3rem $primary-blue, -1rem 0 #000
+
   &-column
     // margin-top: 5rem
     width: 45%
@@ -36,12 +52,13 @@
 
     &-question
       font-size: 1.6vw
-      font-weight: 500
       // background-color: rgba(0,0,0,0.2)
       line-height: 6rem
       cursor: pointer
       width: 96%
       display: inline-block
+      font-family: $primary-font-semi
+
 
       @media screen and (max-width: 1180px)
         font-size: 3vw
@@ -63,6 +80,8 @@
       max-height: 0
       transition: max-height 1s
       overflow: hidden
+      font-family: $primary-font-reg
+
 
       @media screen and (max-width: 1180px)
         font-size: 2.4vw
@@ -77,11 +96,11 @@
     max-height: 50rem
     transition: max-height 1s
 
-  img
-    width: 23rem
-    margin: auto
-    display: block
-    margin-bottom: 3rem
+  // img
+  //   width: 23rem
+  //   margin: auto
+  //   display: block
+  //   margin-bottom: 3rem
 
-    @media screen and (max-width: 500px)
-      width: 18rem
+  //   @media screen and (max-width: 500px)
+  //     width: 18rem
