--- a/assets/sass/_index-intro.sass
+++ b/assets/sass/_index-intro.sass
@@ -44,11 +44,11 @@
 
         h2, p
             color: $primary-white
-            font-family: $primary-font
             text-align: center
 
         h2
             font-size: 5.8vw
+            font-family: $primary-font-bold
 
             @media screen and (max-width: 780px)
                 font-size: 8vw
@@ -57,6 +57,7 @@
                 font-size: 12vw
         p
             font-size: 2vw
+            font-family: $primary-font-semi
 
             @media screen and (max-width: 780px)
                 font-size: 2.8vw
