--- a/assets/sass/_index-why.sass
+++ b/assets/sass/_index-why.sass
@@ -61,7 +61,7 @@
 
   h4
     font-size: 3.2vw
-    font-family: $primary-font-reg
+    font-family: $primary-font-semi
 
     @media screen and (max-width: 950px)
       font-size: 3.8vw
@@ -70,7 +70,7 @@
       font-size: 3rem
   p
     font-size: 2vw
-    font-family: $primary-font-thin
+    font-family: $primary-font-reg
 
     @media screen and (max-width: 500px)
       font-size: 1.8rem
