--- a/assets/sass/_index-we.sass
+++ b/assets/sass/_index-we.sass
@@ -38,6 +38,9 @@
             letter-spacing: 1.5rem
             padding-left: 0.9rem
 
+            @media screen and (max-width: 500px)
+                letter-spacing: 1rem
+
         &-we
             display: block
             letter-spacing: 1rem
