--- a/survey/src/App.css
+++ b/survey/src/App.css
@@ -114,12 +114,14 @@ html, body, #root {
   vertical-align: top;
   width: 350px;
   height: auto;
-  border: 3px solid #72cbcd;
+  border: 5px solid #5dafaf;
   border-radius: 5px;
   cursor: pointer;
   padding: 10px;
   text-align: center;
   margin: 60px 10px 0;
+  /*background-image: linear-gradient(#a3e2e2, #a3e2e2 40%, #6bc6c6 80%);*/
+  background-image: linear-gradient(to bottom right,#6bc6c6, #b9eae9);
 }
 
 .buttons-proj {
