deleted unecessary svg and jpg files. as well as css files not include style. added images for why we different sec. changed sizing of testimonial for mobile.

--- a/assets/sass/_index-testimonial.sass
+++ b/assets/sass/_index-testimonial.sass
@@ -26,6 +26,20 @@
     font-size: 2rem
     font-family: $primary-font-semi
 
+  @media screen and (max-width: 500px)
+    img.d-block
+      width: 28rem!important
+      margin: 0!important
+
+    .clients
+      font-size: 3rem
+
+    .comment
+      font-size: 2rem
+
+    .author
+      font-size: 1.6rem
+
   a
     text-align: center
     color: #000
