--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ h3 {
   margin-bottom: 5rem;
 }
 
-.contact-main, .process-box-3c p, .process-box-img, .process-box-desc {
+.contact-main {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -621,7 +621,7 @@ h3 {
   }
 }
 
-.process2 {
+.process {
   padding: 10rem;
   width: 90%;
   background-color: #69e2d3;
@@ -629,49 +629,49 @@ h3 {
   margin: auto;
 }
 @media screen and (max-width: 1180px) {
-  .process2 {
+  .process {
     padding: 5rem;
     width: 100%;
   }
 }
-.process2-column {
+.process-column {
   display: inline-block;
   vertical-align: top;
   color: #fff;
   text-align: left;
 }
 @media screen and (max-width: 1180px) {
-  .process2-column {
+  .process-column {
     display: block;
     margin: auto;
     width: 80vw !important;
   }
 }
-.process2-column-1 {
+.process-column-1 {
   width: 50%;
 }
-.process2-column-2 {
+.process-column-2 {
   width: 40%;
 }
-.process2-header {
+.process-header {
   font-size: 7vw;
   font-weight: bold;
   line-height: 9vw;
   font-family: "montserratbold";
 }
 @media screen and (max-width: 1180px) {
-  .process2-header {
+  .process-header {
     font-size: 8vw;
     margin-bottom: 4rem;
   }
 }
 @media screen and (max-width: 500px) {
-  .process2-header {
+  .process-header {
     font-size: 3.5rem;
     line-height: 4rem;
   }
 }
-.process2-title {
+.process-title {
   font-size: 1.8vw;
   padding-bottom: 4rem;
   position: relative;
@@ -679,19 +679,19 @@ h3 {
   font-family: "montserratbold";
 }
 @media screen and (max-width: 1180px) {
-  .process2-title {
+  .process-title {
     width: 80%;
     margin: auto;
     font-size: 3.5vw;
   }
 }
 @media screen and (max-width: 500px) {
-  .process2-title {
+  .process-title {
     padding-bottom: 2rem;
     font-size: 2rem;
   }
 }
-.process2-title:before {
+.process-title:before {
   content: "";
   position: absolute;
   left: 0;
@@ -701,112 +701,27 @@ h3 {
   border-bottom: 0.4rem solid #fff;
 }
 @media screen and (max-width: 500px) {
-  .process2-title:before {
+  .process-title:before {
     border-bottom: 0.2rem solid #fff;
   }
 }
-.process2-steps {
+.process-steps {
   font-size: 1.2vw;
   margin-top: 3rem;
   font-family: "montserratregular";
 }
 @media screen and (max-width: 1180px) {
-  .process2-steps {
+  .process-steps {
     font-size: 2.2vw;
     width: 80%;
     margin: 5rem auto;
   }
 }
 @media screen and (max-width: 500px) {
-  .process2-steps {
+  .process-steps {
     font-size: 1.8rem;
     margin: 2rem auto;
   }
-}
-
-.process .row {
-  width: 100% !important;
-  margin-bottom: 0 !important;
-}
-.process-column {
-  margin: 0 !important;
-  width: calc(100%/3) !important;
-}
-.process-box {
-  height: 40rem;
-  font-family: "montserratlight";
-  text-align: center;
-  margin: 0.5rem;
-  border-radius: 0.5rem;
-  box-shadow: inset 0 0 2rem #000;
-  position: relative;
-}
-.process-box-desc {
-  width: 90%;
-  font-size: 2.5rem;
-}
-.process-box-img {
-  width: 90%;
-}
-.process-box-1a {
-  background-color: #5dafa9;
-}
-.process-box-1a img {
-  width: 6.5rem;
-}
-.process-box-1b {
-  background-color: #72cbcd;
-}
-.process-box-1c {
-  background-color: #95d6d8;
-}
-.process-box-2a {
-  background-color: #898a8a;
-}
-.process-box-2a img {
-  width: 14rem;
-}
-.process-box-2a p {
-  color: #fff;
-}
-.process-box-2b {
-  background-color: #a2a2a2;
-  color: #fff;
-}
-.process-box-2c {
-  background-color: #c4c6c6;
-}
-.process-box-3a {
-  background-color: #d8b464;
-}
-.process-box-3a img {
-  width: 12rem;
-}
-.process-box-3b {
-  background-color: #eeca69;
-}
-.process-box-3c {
-  background-color: #f9d480;
-}
-.process-box-3c p {
-  border: 0.5rem solid #000;
-  border-radius: 1rem;
-  color: #000;
-  display: inline-block;
-  font-size: 8rem;
-  padding: 2rem;
-}
-.process-step {
-  display: inline-block;
-}
-.process-step-num {
-  margin: 6rem 0 4rem;
-}
-.process-step-title {
-  font-size: 7rem;
-  line-height: 5rem;
-  font-family: "britannic_boldregular";
-  color: #000;
 }
 
 .faq {
@@ -952,6 +867,21 @@ h3 {
 .testimonial .author {
   font-size: 2rem;
   font-family: "montserratregular";
+}
+@media screen and (max-width: 500px) {
+  .testimonial img.d-block {
+    width: 28rem !important;
+    margin: 0 !important;
+  }
+  .testimonial .clients {
+    font-size: 3rem;
+  }
+  .testimonial .comment {
+    font-size: 2rem;
+  }
+  .testimonial .author {
+    font-size: 1.6rem;
+  }
 }
 .testimonial a {
   text-align: center;
