--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,12 @@ html {
     opacity: 0; }
   to {
     opacity: 1; } }
+.bold {
+  font-family: "montserratbold"; }
+
+.italic {
+  font-style: italic; }
+
 .group {
   width: 90%;
   margin: auto; }
@@ -54,6 +60,9 @@ h3 {
   font-family: "montserratregular";
   text-align: center;
   margin-bottom: 5rem; }
+
+.email {
+  text-decoration: underline; }
 
 .banner {
   position: fixed;
@@ -729,6 +738,58 @@ h3 {
   .testimonial .carousel-indicators li {
     background-color: rgba(0, 0, 0, 0.5) !important; }
 
+.policies {
+  padding: 15rem 10rem 5rem;
+  background: linear-gradient(to bottom, #FDEAD7 0%, #F9F2DF 10%); }
+  .policies-title, .policies-header {
+    text-transform: uppercase;
+    font-family: "montserratbold"; }
+  .policies-title {
+    text-align: center;
+    font-size: 4rem;
+    margin-bottom: 3rem; }
+  .policies-header {
+    font-size: 2.4rem;
+    margin-top: 8rem;
+    position: relative; }
+    .policies-header:before {
+      content: "";
+      position: absolute;
+      top: -4rem;
+      left: 50%;
+      width: 10%;
+      transform: translateX(-50%);
+      height: 0.1rem;
+      border-bottom: 0.2rem solid #000; }
+  .policies-info {
+    font-size: 1.6rem;
+    font-family: "montserratregular";
+    margin-bottom: 2rem; }
+  .policies_payment {
+    margin-bottom: 2rem;
+    list-style: none; }
+    .policies_payment-option {
+      font-size: 1.6rem;
+      font-family: "montserratregular"; }
+
+@media screen and (max-width: 780px) {
+  .policies {
+    text-align: justify;
+    padding: 10rem 3rem 3rem;
+    background: #F9F2DF; }
+    .policies-title {
+      font-size: 2.4rem; }
+    .policies-header {
+      font-size: 1.8rem;
+      margin-bottom: 3rem; }
+      .policies-header:before {
+        width: 30%; }
+    .policies-info {
+      font-size: 1.2rem; }
+    .policies_payment {
+      padding-inline-start: 2rem; }
+      .policies_payment-option {
+        font-size: 1.2rem; } }
 .projects-banner {
   background-image: url("../images/wood-bg.jpg");
   height: 60vh;
@@ -795,7 +856,7 @@ h3 {
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-content: space-evenly;
-    z-index: 100;
+    z-index: 10;
     margin-left: 8%; }
     .client__selector h4 {
       width: 100%;
@@ -1070,26 +1131,38 @@ h3 {
 .footer {
   height: 240px;
   width: 100%;
-  padding: 50px 0 0;
   background-color: #292929;
-  bottom: 0; }
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
   .footer-info {
-    margin: auto;
-    width: 275px; }
+    display: flex;
+    justify-content: center; }
   .footer-image {
-    float: left;
-    width: 9rem;
-    padding: 6px 10px 0 0; }
-  .footer-link {
-    margin: 0 0 10px;
-    padding: 0 !important; }
-    .footer-link:last-child a {
+    width: 7rem;
+    align-self: start; }
+  .footer-list {
+    list-style: none;
+    text-decoration: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0;
+    margin-left: 2rem; }
+    .footer-list a {
+      color: #fff;
+      text-decoration: underline;
+      font-size: 1.4rem;
+      font-family: "montserratregular";
       cursor: pointer; }
-  .footer-link a {
-    color: #fff;
-    text-decoration: underline;
-    font-size: 16px;
-    font-family: "montserratregular";
-    cursor: not-allowed; }
+  .footer-social {
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem;
+    justify-content: space-around; }
+    .footer-social img {
+      width: 4rem; }
 
 /*# sourceMappingURL=style.css.map */
