--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -1,32 +1,44 @@
 /*footer*/
 .footer 
-    height: 240px
-    width: 100%
-    padding: 50px 0 0
-    background-color: #292929
-    bottom: 0
+  height: 240px
+  width: 100%
+  background-color: #292929
+  bottom: 0
+  display: flex
+  justify-content: center
+  align-items: center
     
-    &-info 
-        margin: auto
-        width: 275px
+  &-info 
+    display: flex
+    justify-content: center
 
-    &-image 
-        float: left
-        width: 9rem
-        padding: 6px 10px 0 0
+  &-image 
+    width: 7rem
+    align-self: start
 
-    &-link
-        margin: 0 0 10px
-        padding: 0!important
+  &-list
+    list-style: none
+    text-decoration: none
+    padding: 0
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    margin: 0
+    margin-left: 2rem
 
-        &:last-child a
-            cursor: pointer
+    a
+      color: #fff
+      text-decoration: underline
+      font-size: 1.4rem
+      font-family: $primary-font-semi
+      cursor: pointer
 
+  &-social
+    display: flex
+    flex-direction: column
+    margin-left: 2rem
+    justify-content: space-around
 
-    &-link a 
-        color: #fff
-        text-decoration: underline
-        font-size: 16px
-        font-family: $primary-font-semi
-        cursor: not-allowed
+    img
+      width: 4rem
 
