--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -74,6 +74,12 @@ $gutter-horizontal: 6rem
   to
     opacity: 1
 
+.bold
+  font-family: $primary-font-bold
+
+.italic
+  font-style: italic
+
 .group
   width: 90%
   margin: auto
@@ -84,6 +90,9 @@ h3
   font-family: $primary-font-semi
   text-align: center
   margin-bottom: 5rem
+
+.email
+  text-decoration: underline
 
 .banner
   position: fixed
@@ -204,6 +213,8 @@ h3
 @import _index-faq
 
 @import _index-testimonial
+
+@import _policies
 
 @import _projects
 
